--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
-<head>
-    <title>asd</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/layout.css}" href="../static/css/layout.css">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="../static/css/main.css">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/nav.css}" href="../static/css/nav.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
-</head>
+<!--<head>-->
+<!--    <title>asd</title>-->
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/layout.css}" href="../static/css/layout.css">-->
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="../static/css/main.css">-->
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/nav.css}" href="../static/css/nav.css">-->
+<!--    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">-->
+<!--    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">-->
+<!--    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">-->
+<!--</head>-->
 <body>
     <div class="index-main-container" layout:fragment="content">
         <div class="index-first-column base-column w-100">
@@ -48,7 +48,7 @@
         <div class="index-second-column base-column d-none">
             <div class="index-header">
                 <img th:src="@{/image/user_icon.png}" src="../static/image/user_icon.png" alt="" class="index-header-icon">
-                <span class="index-header-text">Username</span>
+                <span class="index-header-text"></span>
             </div>
 
             <div class="chat-messages" id="chat-message">
