--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -70,7 +70,6 @@
     height: 50px;
     border-radius: 10px;
     object-fit: cover;
-    background-color: white;
 }
 
 .status-indicator {
@@ -109,10 +108,9 @@
     background-color: #fff;
     color: #000;
     padding: 10px 15px;
-    margin: 8px 0;
     border-radius: 15px 0 15px 15px;
     max-width: 60%;
-    margin-left: auto;
+    margin: 8px 0 8px auto;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     border: 1px solid #f1f1f1;
 }
