--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" th:href="@{/css/layout.css}" href="../static/css/layout.css">
         <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="../static/css/main.css">
         <link rel="stylesheet" type="text/css" th:href="@{/css/nav.css}" href="../static/css/nav.css">
         <link rel="stylesheet" type="text/css" th:href="@{/css/profile.css}" href="../static/css/profile.css">
+        <link rel="stylesheet" type="text/css" th:href="@{/css/inbox.css}" href="../static/css/inbox.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
         <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
@@ -21,12 +19,13 @@
     <div class="main-container">
         <div class="navbar base-column">
             <div class="mt-4 navbar-top">
-                <div class="navbar-top-content">
-                    <div class="d-flex align-items-center">
-                        <img th:src="@{/image/user_icon.png}" src="../static/image/user_icon.png" alt="" class="user-icon">
-                        <p th:text="${dName}"></p>
-                    </div>
+                <div>
+                    <img th:src="@{/image/user_icon.png}" src="../static/image/user_icon.png" alt="" class="user-icon">
+                    <p th:text="${dName}">asdasd</p>
                 </div>
+                <a th:href="@{/inbox}" th:classappend="${currentPage == 'inbox'} ? 'navbar-top-btn-active'">
+                    <i class="fa-solid fa-bell"></i>
+                </a>
             </div>
 
             <div class="navbar-middle">
